--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,63 @@
     <div class="headerform"><a href="index.html">Main</a></div>
     <div class="headerform"><a href="form.html">Form</a></div>
   </header>
-  <body></body>
+  <body>
+    <div class="contactbox">
+      <div class="contacts">
+        <div class="contactHead"><h1>We are Auto super shop</h1></div>
+        <div class="contactText">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex obcaecati
+          blanditiis deleniti consequuntur impedit? Minus neque provident
+          repudiandae suscipit voluptatem laborum corrupti earum delectus, atque
+          in ipsa officia ducimus natus, impedit repellat deleniti, inventore
+          necessitatibus. Aliquid, saepe ab! Quibusdam laboriosam similique
+          vitae sapiente officia. Iusto voluptates nostrum soluta quam id alias,
+          adipisci deserunt explicabo aut dolores dicta, blanditiis quaerat odit
+          perspiciatis voluptatibus eaque odio voluptas pariatur, ipsam dolore
+          rerum quia? Est unde architecto deleniti, labore quia quidem
+          laboriosam tenetur recusandae repellendus officia sint hic impedit
+          voluptas expedita maxime harum! Dolorem eos aperiam non tempora minus,
+          quaerat soluta rerum maiores atque?
+        </div>
+        <div class="contactHead"><h2>We also do</h2></div>
+        <div class="contactText">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex obcaecati
+          blanditiis deleniti consequuntur impedit? Minus neque provident
+          repudiandae suscipit voluptatem laborum corrupti earum delectus, atque
+          in ipsa officia ducimus natus, impedit repellat deleniti, inventore
+          necessitatibus. Aliquid, saepe ab! Quibusdam laboriosam similique
+          vitae sapiente officia. Iusto voluptates nostrum soluta quam id alias,
+          adipisci deserunt explicabo aut dolores dicta, blanditiis quaerat odit
+          perspiciatis voluptatibus eaque odio voluptas pariatur, ipsam dolore
+          rerum quia? Est unde architecto deleniti, labore quia quidem
+          laboriosam tenetur recusandae repellendus officia sint hic impedit
+          voluptas expedita maxime harum! Dolorem eos aperiam non tempora minus,
+          quaerat soluta rerum maiores atque?
+        </div>
+      </div>
+    </div>
+  </body>
+  <footer class="footer">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste impedit
+    laborum sit suscipit dolores accusamus, distinctio eaque ut dolorum
+    explicabo.
+  </footer>
+  <div class="rest">
+    <tr>
+      <td>
+        <img src="" width="25px" height="25px" /><a class="fot" href="">YT</a>
+      </td>
+      <td>
+        <img src="" width="25px" height="25px" /><a class="fot" href=""
+          >INSTA</a
+        >
+      </td>
+      <td>
+        <img src="" width="25px" height="25px" /><a class="fot" href=""
+          >FACEBOOK</a
+        >
+      </td>
+    </tr>
+  </div>
   <script type="module" src="index.js"></script>
 </html>
