--- a/index.html
+++ b/index.html
@@ -12,12 +12,27 @@
     <div class="headerform"><a href="form.html">Form</a></div>
     <div class="headerform"><a href="contact.html">Kontaktai</a></div>
   </header>
-
   <body>
 
+    <div class="contbox">
+      <div class="cont">
+      </div>
+    </div>
 
-
+    <div class="contbox">
+      <div class="cont">
+      </div>
+    </div>
   </body>
 
+  <footer class="footer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste impedit laborum sit suscipit dolores accusamus, distinctio eaque ut dolorum explicabo.
+  </footer>
+  <div class="rest">
+    <tr>
+        <td><img src="" width="25px" height="25px"><a class="fot" href="">YT</a></td>
+        <td><img src="" width="25px" height="25px"><a class="fot" href="">INSTA</a></td>
+        <td><img src="" width="25px" height="25px"><a class="fot" href="">FACEBOOK</a></td>
+    </tr>
+</div>
   <script type="module" src="index.js"></script>
 </html>
