--- a/form.html
+++ b/form.html
@@ -9,9 +9,8 @@
   <header class="header">
     <div class="headername bold"><h1>Auto super shop</h1></div>
 
-      <div class="headerform"><a href="index.html">Atgal</a></div>
-      <div class="headerform"><a href="contact.html">Kontaktai</a></div>
-
+    <div class="headerform"><a href="index.html">Atgal</a></div>
+    <div class="headerform"><a href="contact.html">Kontaktai</a></div>
   </header>
   <body>
     <div class="flexbox">
@@ -37,17 +36,23 @@
           <textarea id="info" cols="40" rows="15"></textarea>
 
           <br />
-          <button type="submit" id="confirmBtn">Patvirtinti</button>
+          <button type="submit" id="confirmBtn">Add</button>
           <button id="remove">Remove</button>
         </form>
-
         <div class="border">
-            <div class="container"></div>
+          <div class="container"></div>
         </div>
       </div>
     </div>
   </body>
-  <footer class="footer"></footer>
-  <div class="rest"></div>
+  <footer class="footer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste impedit laborum sit suscipit dolores accusamus, distinctio eaque ut dolorum explicabo.
+  </footer>
+  <div class="rest">
+    <tr>
+        <td><img src="" width="25px" height="25px"><a class="fot" href="">YT</a></td>
+        <td><img src="" width="25px" height="25px"><a class="fot" href="">INSTA</a></td>
+        <td><img src="" width="25px" height="25px"><a class="fot" href="">FACEBOOK</a></td>
+    </tr>
+</div>
   <script type="module" src="index.js"></script>
 </html>
